# market-trail-scout

./: README.md  pyproject.toml
docs/: project-vision.md
src/market_trail_scout/: .env-template  cli.py
src/market_trail_scout/.run/: Run End Of Day Update.run.xml  Run FIFO Trade Matches.run.xml  Run Fidelity Trade Importer.run.xml  Run Fundamentals Update.run.xml  Run Init.run.xml  Run breakout screener.run.xml  Run wedge.run.xml
src/market_trail_scout/services/: breakout_exporter.py  breakout_scorer.py  breakout_screener.py  data_initializer.py  database_connector.py  delay_optimizer.py  fidelity_trade_importer.py  fifo_trade_matcher.py  schema_initializer.py  trendline_fitter.py
src/market_trail_scout/services/sql/: closed_trade_performance_report.sql  rising_stock_finder.sql  sound_breakout_candidates.sql  swing_slope_breakout.sql
